--- a/exercise-1/index.html
+++ b/exercise-1/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Exercise 1</title>
-	<link rel="stylesheet" href="../writeup.css">
+	<link rel="stylesheet" href="writeup.css">
 </head>
 <body>
 	<!-- your html here -->
